[gd_scene load_steps=4 format=3 uid="uid://cmf8361jt5w0s"]

[ext_resource type="Script" path="res://Creatures/Darkner.gd" id="1_hpd0k"]
[ext_resource type="Texture2D" uid="uid://cn6mrrqhsh05j" path="res://Textures/Sprite sheets/Darkner_spritesheet.png" id="2_i06o2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8o5x0"]
radius = 85.0
height = 402.0

[node name="Darkner" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_hpd0k")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, 3)
shape = SubResource("CapsuleShape2D_8o5x0")

[node name="DarknerSpritesheet" type="Sprite2D" parent="."]
texture = ExtResource("2_i06o2")
region_enabled = true
region_rect = Rect2(1414.73, -8.28738, 177.156, 415.512)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
